# Cycle_Buddy

./: .gitignore  CMakeLists.txt  CycleBuddy.apk  Cycle_Buddy  Doxyfile  README.md  Unit_test_cam  Unit_test_hall  Unit_test_ultra  app-cb.apk  cycle_buddy_docs  index.md  run.sh  state_machines.js
CycleBuddy/: build.gradle  settings.gradle
CycleBuddy/app/: build.gradle  google-services.json
CycleBuddyApp/: build.gradle
CycleBuddyApp/app/: build.gradle
DistanceMeasure/: sensor  sensor_measure.cpp  ultrasonic.out  ultrasonic_sensor.cpp  ultrasonic_sensor.out  ultrasonic_sensor.py
Images/: sequence_diagram.vsdx  state_machine_diagram.vsdx
Plate_Number/: Plate_Number.sln
Plate_Number/Plate_Number/: Plate_Number.cpp  Plate_Number.vcxproj  Plate_Number.vcxproj.filters
docs/: index.md
docs/html/: Doxygen__Homepage_8md.html  Plate__Number_8cpp.html  Plate__Number_8cpp.js  Plate__Number_8cpp__incl.map  Plate__Number_8cpp__incl.md5  Plate__Number_8cpp_a796b4d7e56c6f5a14a9cf2742c092f5e_icgraph.map  annotated.html  (+272 more)
html/: annotated.html  classSensor-members.html  classSensor.html  classSensorCallback-members.html  classSensorCallback.html  classes.html  classhallSampleCallback-members.html  classhallSampleCallback.html  classsonarSampleCallback-members.html  classsonarSampleCallback.html  functions.html  functions_func.html  hierarchy.html  index.html  md_README.html  menudata.js  pages.html  sensors__lib_8h_source.html
latex/: annotated.tex  classSensor.tex  classSensorCallback.tex  classhallSampleCallback.eps  classhallSampleCallback.tex  classsonarSampleCallback.eps  classsonarSampleCallback.tex  refman.tex
src/: CMakeLists.txt  Doxygen_Homepage.md  app_connect.cpp  callback_hall.cpp  callback_sonar.cpp  cam.cpp  camera.cpp  comm.cpp  conv.py  global_var.h  gpio_def.h  hall_effect_sensor.cpp  hall_effect_test.cpp  main.cpp  mix.cpp  plate_id.cpp  pstream.h  sensors.cpp  sensors_lib.h  sensors_test.cpp  simple_bash.sh  simple_bash_call.cpp  simpletest_raspicam.cpp  stdafx.h  test_bash  testbash  thershold.h  ultrasonic_sensor.cpp  upload.py
src/Plate_Number/Plate_Number/x64/Debug/: vc142.idb
src/Plate_Number/Plate_Number/x64/Debug/Plate_Number.tlog/: link.write.1.tlog
src/Plate_Number/x64/Debug/: Plate_Number.ilk
src/html/: annotated.html  classSensor.html  classSensorCallback.html  classes.html  classhallSampleCallback.html  classsonarSampleCallback.html  dir_017ad5e908c41501f6a06b5119b37293.html  dir_2201e631f213d3d83903011c80bd31a6.html  dir_3df4962367057c06e78a36cd66281bd4.html  dir_48ea85d153c58800f79bb6a5e66dd1f3.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_9ec187c9e8b1cacd73380b01e64a7fd6.html  dir_c189eeb7a3c5585ae36c9636b9a0aa1e.html  files.html  functions.html  functions_func.html  hierarchy.html  menudata.js  sensors__lib_8h_source.html
src/html/search/: all_2.js  all_3.js  classes_0.js  classes_1.js  functions_1.js  pages_0.js  searchdata.js
src/latex/: annotated.tex  classSensor.tex  classSensorCallback.eps  classSensorCallback.tex  classhallSampleCallback.tex  md_README.tex  refman.tex
test/: unit_cam.cpp  unit_hall.cpp  unit_ultra.cpp
(+252 files in other folders)
